--- a/front/app/public/css/site.css
+++ b/front/app/public/css/site.css
@@ -2,3 +2,7 @@ body {
   font-family: 'Helvetica Neue', Verdana, Helvetica, Arial, sans-serif;
 }
 
+.modal-wrapper {
+  padding-right: 15px;
+  display: block;
+}
